liitle changes in index and adding deploy to firebase

--- a/public/index.html
+++ b/public/index.html
@@ -38,4 +38,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyB5r1L7pm6h7fQjt59V9XplCHWGC-z32hM",
+      authDomain: "srtv-eventio.firebaseapp.com",
+      databaseURL: "https://srtv-eventio.firebaseio.com",
+      projectId: "srtv-eventio",
+      storageBucket: "",
+      messagingSenderId: "609912622144"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
